--- a/assets/css/pokedex.css
+++ b/assets/css/pokedex.css
@@ -125,6 +125,7 @@
 .pokemon .detail img {
     max-width: 100%;
     height: 70px;
+    cursor: pointer;
 }
 
 .pagination {
@@ -144,6 +145,200 @@
     background-color: #6c79db;
     border: none;
     border-radius: 1rem;
+}
+
+.topo .buttons {
+    width: 90%;
+    height: 20%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 2%;
+
+}
+
+.topo .buttons .back img {
+    max-width: 100%;
+    height: 30px;
+    cursor: pointer;
+}
+
+.topo .buttons .favorite img {
+    max-width: 100%;
+    height: 30px;
+    cursor: pointer;
+}
+
+.info {
+    width: 90%;
+    height: 20%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 10% 5% 0% 5%;
+}
+
+.info-esq {
+    width: 50%;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+
+}
+
+.info-esq .name {
+    font-size: 2rem;
+    color: #ffffff;
+    margin-bottom: 5%;
+}
+
+.info-esq .types {
+    padding: 0;
+    margin: 0;
+    list-style: none;
+}
+
+.info-esq .types .type {
+    color: #fff;
+    padding: .25rem .5rem;
+    margin: .25rem 0;
+    font-size: .625rem;
+    border-radius: 1rem;
+    filter: brightness(1.1);
+    text-align: center;
+}
+
+.info-dir {
+    width: 50%;
+    display: flex;
+    justify-content: flex-end;
+}
+
+.info-dir .number {
+    color: #ffffff;
+}
+
+.imagem {
+    width: 90%;
+    height: 60%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.imagem img {
+    max-width: 100%;
+    height: 60%;
+
+}
+
+/* Style the tab */
+.tab {
+    max-width: 992px;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    overflow: hidden;
+    border: 1px solid #ccc;
+    background-color: #f1f1f1;
+}
+
+/* Style the buttons inside the tab */
+.tab button {
+    background-color: inherit;
+    float: left;
+    border: none;
+    outline: none;
+    cursor: pointer;
+    padding: 14px 16px;
+    transition: 0.3s;
+    font-size: 17px;
+}
+
+/* Change background color of buttons on hover */
+.tab button:hover {
+    background-color: #ddd;
+}
+
+/* Create an active/current tablink class */
+.tab button.active {
+    background-color: #ccc;
+}
+
+/* Style the tab content */
+.tabcontent {
+    display: none;
+    max-width: 992px;
+    height: auto;
+    align-items: center;
+    justify-content: space-evenly;
+    padding: 6px 12px;
+    border: 1px solid #ccc;
+    border-top: none;
+    cursor: pointer;
+}
+
+.abilitysContent {
+    width: 25%;
+    height: 100%;
+    display: flex;
+    align-items: flex-start;
+    justify-content: center;
+    flex-direction: column;
+}
+
+
+.abilitysContent .type li {
+    color: #fff;
+    padding: .25rem .5rem;
+    margin: .25rem 0;
+    font-size: .625rem;
+    border-radius: 1rem;
+    filter: brightness(1.1);
+    text-align: center;
+}
+
+.abilitysContent .abilitys li {
+    margin: 10px 0 0 10px;
+    list-style: none;
+}
+
+.sobreContent {
+
+    height: 100%;
+    display: flex;
+    align-items: flex-start;
+    justify-content: space-evenly;
+    flex-direction: column;
+}
+
+.sobreContent:nth-child(1) {
+    text-transform: capitalize;
+}
+
+.topo:nth-child(1) {
+    text-transform: capitalize;
+}
+
+.status li{
+    margin-bottom: 15px;
+    list-style: none;
+    
+}
+
+.locais{
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+}
+
+.locais li{
+    
+    margin-bottom: 15px;
+    list-style: none;
+    
 }
 
 @media screen and (min-width: 380px) {
