--- a/assets/css/pokedex.css
+++ b/assets/css/pokedex.css
@@ -241,6 +241,7 @@
     overflow: hidden;
     border: 1px solid #ccc;
     background-color: #f1f1f1;
+    margin-top: 20px
 }
 
 /* Style the buttons inside the tab */
